just changed the names of things

--- a/views/profileList.ejs
+++ b/views/profileList.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>About</title>
+  <title>Profile List</title>
 </head>
 <body>
-  <h1>Profiles</h1>
+  <h1>Profile List</h1>
   <p>This site is about: <%= topic %></p>
   <a href="/">Go Home</a>
 </body>
