--- a/views/profileList.ejs
+++ b/views/profileList.ejs
@@ -9,3 +9,29 @@
   <a href="/">Go Home</a>
 </body>
 </html>
+
+
+<html>
+<head>
+  <title>Profiles Homepage</title>
+  <link rel="stylesheet" href="/style.css">
+</head>
+<body>
+  <header>
+    <h1>Profiles</h1>
+  </header>
+
+  <main>
+    <div class="profiles-container">
+      <% profiles.forEach(profile => { %>
+        <div class="profile-card">
+          <img src="<%= profile.picture %>" alt="<%= profile.name %>'s photo">
+          <h2><%= profile.name %></h2>
+          <p>Age: <%= profile.age %></p>
+          <p>Hobby: <%= profile.hobby %></p>
+        </div>
+      <% }) %>
+    </div>
+  </main>
+</body>
+</html>
