--- a/views/ProfileCreation.ejs
+++ b/views/ProfileCreation.ejs
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 </html>
-<form action="/makeprofile" method = "POST">
+<form action="/set-profile" id="set-profile" method = "POST">
     <h1>Enter Profile Information</h1>
     <label for="text">Name</label>
     <input type="text" id="Name" name="Name" required>
@@ -31,5 +31,28 @@
     <label for="Interests">Interest</label>
     <textarea id = "Interests" name="Interests" row="4" required></textarea>
 
-    <input type="submit" value="Submit">
+    <button type="submit">Create Profile</button>button>
 </form>
+<p id="message"></p>
+
+<script>
+    document.getElementById("set-profile").addEventListener("submit", async (e) => {
+        e.preventDefault();
+
+        const name = document.getElementById("Name").value;
+        const age = document.getElementById("Age").value;
+        const year = document.getElementById("Year").value;
+        const major = document.getElementById("Major").value;
+        const classes = document.getElementById("Classes").value;
+        const interests = document.getElementById("Interests").value;
+
+        const response = await fetch('https://localhost:3000/set-profile', {
+            method: "POST",
+            headers: { "Content-Type": "application/json"},
+            body: JSON.stringify({ name, age, year, major, classes, interests})
+        });
+
+        const result = await response.json();
+        document.getElementById("message").textContext = result.message || result.error;
+    })
+</script>
