--- a/views/profileList.ejs
+++ b/views/profileList.ejs
@@ -28,7 +28,7 @@
           <img src="<%= profile.picture %>" alt="<%= profile.name %>'s photo">
           <h2><%= profile.name %></h2>
           <p>Age: <%= profile.age %></p>
-          <p>Hobby: <%= profile.hobby %></p>
+          <p>Major: <%= profile.major %></p>
         </div>
       <% }) %>
     </div>
