changes var names

--- a/views/profileList.ejs
+++ b/views/profileList.ejs
@@ -27,8 +27,11 @@
         <div class="profile-card">
           <img src="<%= profile.picture %>" alt="<%= profile.name %>'s photo">
           <h2><%= profile.name %></h2>
-          <p>Age: <%= profile.age %></p>
-          <p>Major: <%= profile.major %></p>
+          <p>Age: <%= profile.Age %></p>
+          <p>Year: <%= profile.Year %></p>
+          <p>Major: <%= profile.Major %></p>
+          <p>Classes: <%= profile.Classes %></p>
+          <p>Interests: <%= profile.Interests %></p>
         </div>
       <% }) %>
     </div>
