--- a/views/profileList.ejs
+++ b/views/profileList.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Profile List</title>
+  <title>Profile</title>
 </head>
 <body>
   <h1>Profile List</h1>
@@ -21,18 +21,29 @@
     <h1>Profiles</h1>
   </header>
 
+  <form action="/profiles" method="get">
+  <input 
+    type="text" 
+    name="q" 
+    placeholder="Search by name, major, etc." 
+    value="<%= typeof q !== 'undefined' ? q : '' %>">
+  <button type="submit">Search</button>
+  </form>
+
+
   <main>
-    <div class="profiles-container">
+    
       <% profiles.forEach(profile => { %>
-        <div class="profile-card">
+        
+        div class="profile-card">
           <img src="<%= profile.picture %>" alt="<%= profile.name %>'s photo">
-          <h2><%= profile.name %></h2>
+          <p>Name: <%= profile.Name %></p>
           <p>Age: <%= profile.Age %></p>
           <p>Year: <%= profile.Year %></p>
           <p>Major: <%= profile.Major %></p>
           <p>Classes: <%= profile.Classes %></p>
           <p>Interests: <%= profile.Interests %></p>
-        </div>
+        </>
         <hr>
       <% }) %>
     </div>
