--- a/views/profileList.ejs
+++ b/views/profileList.ejs
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1>Profile List</h1>
-  <p>This site is about: <%= topic %></p>
+  <p>Feel free to explore and find new friends!!</p>
   <a href="/">Go Home</a>
 </body>
 </html>
@@ -35,15 +35,16 @@
     
       <% profiles.forEach(profile => { %>
         
-        div class="profile-card">
-          <img src="<%= profile.picture %>" alt="<%= profile.name %>'s photo">
+        <div class="profile-card">
+          <!--<img src="<%= profile.picture %>" alt="<%= profile.name %>'s photo"> -->
           <p>Name: <%= profile.Name %></p>
           <p>Age: <%= profile.Age %></p>
           <p>Year: <%= profile.Year %></p>
           <p>Major: <%= profile.Major %></p>
           <p>Classes: <%= profile.Classes %></p>
           <p>Interests: <%= profile.Interests %></p>
-        </>
+        <div>
+        </div>
         <hr>
       <% }) %>
     </div>
