Links profiles to users and allows users to update profiles without duplicating it

--- a/views/ProfileCreation.ejs
+++ b/views/ProfileCreation.ejs
@@ -55,5 +55,9 @@
 
         const result = await response.json();
         document.getElementById("message").textContext = result.message || result.error;
+        if (result.success){
+            window.location.href ="/profiles";
+        }
     });
 </script>
+
