--- a/views/profileList.ejs
+++ b/views/profileList.ejs
@@ -35,6 +35,7 @@
                 <p class="card-text"><strong>Major:</strong> <%= profile.Major %></p>
                 <p class="card-text"><strong>Classes:</strong> <%= profile.Classes %></p>
                 <p class="card-text"><strong>Interests:</strong> <%= profile.Interests %></p>
+                <p class="card-text"><strong>Instagram:</strong> <%= profile.Instagram%></p>
               </div>
             </div>
           </div>
