Add update profile buttons on home page and profiles page

--- a/views/profileList.ejs
+++ b/views/profileList.ejs
@@ -9,6 +9,7 @@
     <h1 class="mb-3">Profile List</h1>
     <p class="mb-3">Feel free to explore and find new friends!!</p>
     <a href="/" class="btn btn-primary mb-4">Go Home</a>
+    <a href="/set-profile" class="btn btn-primary mb-4">Update Profile</a>
 
     <!-- Centered search bar -->
     <form action="/profiles" method="get" class="d-flex justify-content-center mb-5">
